Reproducing without ClojureStorm